# Insight

./: .gitignore  CMakeLists.txt  HEADER  README.md
include/insight/: annotate  annotate.h  compare  compare.hxx  designated_initializer_compat.h  insight  insight.h  range  stream.hxx  types  types.h  vararg.h
samples/: CMakeLists.txt  classes.cc  struct.c
src/: insight.cc  internal.hh  mangle.cc  mangle.h  types.cc
src/cbridge/: bridge.cc
src/core/: core.cc  core.hh  dwarf.cc
src/core/dwarf/: annotation.cc  annotation.hh  dwarf.cc  dwarf.hh  enum.cc  enum.hh  inference.cc  inference.hh  struct.cc  struct.hh  subprogram.cc  subprogram.hh  type.cc  type.hh  union.cc  union.hh
src/data/: internal.hh  types.cc
src/util/: mangle.cc  mangle.hh
tests/: CMakeLists.txt  annotation.cc  class.cc  enum.cc  test.cc  typeof.cc  union.cc  virtual.cc
